--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -1,5 +1,10 @@
 <!-- <mat-spinner *ngIf="isDataLoaded == false"></mat-spinner> -->
 <div class="app-container">
   <app-header></app-header>
-  <h1>Home Component</h1>
+  <div class="antique-options">
+    <button class="btn btn-primary">Add New Antique</button>
+  </div>
+  <div class="antiques-table">
+
+  </div>
 </div>
