save antique working

--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -2,7 +2,7 @@
 <div class="app-container">
   <app-header></app-header>
   <div class="antique-options">
-    <button class="btn btn-primary">Add New Antique</button>
+    <button class="btn btn-primary" (click)="addNewAntique()">Add New Antique</button>
   </div>
   <div class="antiques-table">
 
