--- a/src/app/Components/NewAntiqueComponent/newAntique.component.html
+++ b/src/app/Components/NewAntiqueComponent/newAntique.component.html
@@ -40,5 +40,6 @@
             <input type="text" placeholder="In Stock / Sold" required [(ngModel)]="dataService.Antique.status" [ngModelOptions]="{standalone: true}">
         </form>
         <button class="btn btn-success save-button" (click)="saveAntique()">Save Antique</button>
+        <button class="btn btn-primary save-button" (click)="backToHome()">Go Back</button>
     </div>
 </div>
