--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -1,10 +1,52 @@
 <!-- <mat-spinner *ngIf="isDataLoaded == false"></mat-spinner> -->
-<div class="app-container">
-  <app-header></app-header>
-  <div class="antique-options">
-    <button class="btn btn-primary" (click)="addNewAntique()">Add New Antique</button>
-  </div>
-  <div class="antiques-table">
-
+<app-header></app-header>
+<div class="container">
+  <div class="app-container">
+    <div class="antique-options">
+      <button class="btn btn-primary" (click)="addNewAntique()">Add New Antique</button>
+    </div>
+    <div class="antiques-table">
+      <table class="table table-striped" [mfData]="this.antiques" #mf="mfDataTable" [mfRowsOnPage]="5">
+        <thead>
+          <tr>
+            <th style="width: 20%">
+              <mfDefaultSorter by="name">Name</mfDefaultSorter>
+            </th>
+            <th style="width: 20%">
+              <mfDefaultSorter by="description">Description</mfDefaultSorter>
+            </th>
+            <th style="width: 20%">
+              <mfDefaultSorter by="condition">condition</mfDefaultSorter>
+            </th>
+            <th style="width: 15%">
+              <mfDefaultSorter by="value">Value</mfDefaultSorter>
+            </th>
+            <th style="width: 20%">
+              <mfDefaultSorter by="location">Location</mfDefaultSorter>
+            </th>
+            <th style="width: 5%">
+              <mfDefaultSorter by="edit">Edit</mfDefaultSorter>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of antiques">
+            <td>{{item.name}}</td>
+            <td>{{item.description}}</td>
+            <td>{{item.condition}}</td>
+            <td>{{item.value}}</td>
+            <td>{{item.location}}</td>
+            <td (click)="editItem(item._id)">Edit Item</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="4">
+              <mfBootstrapPaginator [rowsOnPageSet]="[5,10,25]"></mfBootstrapPaginator>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
   </div>
 </div>
