--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -12,14 +12,8 @@
             <th style="width: 20%">
               <mfDefaultSorter by="name">Name</mfDefaultSorter>
             </th>
-            <th style="width: 20%">
+            <th style="width: 50%">
               <mfDefaultSorter by="description">Description</mfDefaultSorter>
-            </th>
-            <th style="width: 20%">
-              <mfDefaultSorter by="condition">condition</mfDefaultSorter>
-            </th>
-            <th style="width: 15%">
-              <mfDefaultSorter by="value">Value</mfDefaultSorter>
             </th>
             <th style="width: 20%">
               <mfDefaultSorter by="location">Location</mfDefaultSorter>
@@ -27,16 +21,18 @@
             <th style="width: 5%">
               <mfDefaultSorter by="edit">Edit</mfDefaultSorter>
             </th>
+            <th style="width: 5%">
+              <mfDefaultSorter by="edit">Remove</mfDefaultSorter>
+            </th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let item of antiques">
             <td>{{item.name}}</td>
             <td>{{item.description}}</td>
-            <td>{{item.condition}}</td>
-            <td>{{item.value}}</td>
             <td>{{item.location}}</td>
-            <td (click)="editItem(item._id)">Edit Item</td>
+            <td (click)="editItem(item._id)">Edit</td>
+            <td (click)="editItem(item._id)">Remove</td>
           </tr>
         </tbody>
         <tfoot>
