--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -3,45 +3,36 @@
 <div class="container">
   <div class="app-container">
     <div class="antique-options">
-      <button class="btn btn-primary" (click)="addNewAntique()">Add New Antique</button>
+      <button class="btn btn-primary add-new-button" (click)="addNewAntique()">Add New Antique</button>
     </div>
     <div class="antiques-table">
-      <table class="table table-striped" [mfData]="this.antiques" #mf="mfDataTable" [mfRowsOnPage]="5">
+      <table class="table table-striped" [mfData]="this.antiques" #mf="mfDataTable" [mfRowsOnPage]="25">
         <thead>
           <tr>
-            <th style="width: 20%">
-              <mfDefaultSorter by="name">Name</mfDefaultSorter>
-            </th>
-            <th style="width: 50%">
-              <mfDefaultSorter by="description">Description</mfDefaultSorter>
-            </th>
-            <th style="width: 20%">
-              <mfDefaultSorter by="location">Location</mfDefaultSorter>
-            </th>
-            <th style="width: 5%">
-              <mfDefaultSorter by="edit">Edit</mfDefaultSorter>
-            </th>
-            <th style="width: 5%">
-              <mfDefaultSorter by="edit">Remove</mfDefaultSorter>
+            <th style="width: 20%">Name</th>
+            <th style="width: 50%">Description</th>
+            <th style="width: 10%">Location</th>
+            <th style="width: 10%">Created On</th>
+            <th style="width: 5%">Edit</th>
+            <th style="width: 5%">Trash</th>
+          </tr>
+          <tr>
+            <th colspan="3">
+              Search Table by Name:
+              <input type="text" [(ngModel)]="queryString" placeholder="Search...">
             </th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of antiques">
+          <tr *ngFor="let item of antiques  | FilterPipe: 'name': queryString">
             <td>{{item.name}}</td>
             <td>{{item.description}}</td>
             <td>{{item.location}}</td>
+            <td>{{item.createdAt | date: 'dd/MM/yyyy'}}</td>
             <td (click)="editItem(item._id)">Edit</td>
-            <td (click)="editItem(item._id)">Remove</td>
+            <td><i class="fa fa-trash delete-item"></i></td>
           </tr>
         </tbody>
-        <tfoot>
-          <tr>
-            <td colspan="4">
-              <mfBootstrapPaginator [rowsOnPageSet]="[5,10,25]"></mfBootstrapPaginator>
-            </td>
-          </tr>
-        </tfoot>
       </table>
     </div>
   </div>
