--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -6,7 +6,7 @@
       <button class="btn btn-primary add-new-button" (click)="addNewAntique()">Add New Antique</button>
     </div>
     <div class="antiques-table">
-      <table class="table table-striped" [mfData]="this.antiques" #mf="mfDataTable" [mfRowsOnPage]="25">
+      <table class="table table-striped">
         <thead>
           <tr>
             <th style="width: 20%">Name</th>
@@ -25,12 +25,14 @@
         </thead>
         <tbody>
           <tr *ngFor="let item of antiques  | FilterPipe: 'name': queryString">
-            <td>{{item.name}}</td>
-            <td>{{item.description}}</td>
-            <td>{{item.location}}</td>
+            <td (click)="goToAntiquePage(item._id)">{{item.name}}</td>
+            <td (click)="goToAntiquePage(item._id)">{{item.description}}</td>
+            <td (click)="goToAntiquePage(item._id)">{{item.location}}</td>
             <td>{{item.createdAt | date: 'dd/MM/yyyy'}}</td>
             <td (click)="editItem(item._id)">Edit</td>
-            <td><i class="fa fa-trash delete-item"></i></td>
+            <td>
+              <i class="fa fa-trash delete-item"></i>
+            </td>
           </tr>
         </tbody>
       </table>
