--- a/src/app/Components/ViewAntiqueComponent/viewAntique.component.html
+++ b/src/app/Components/ViewAntiqueComponent/viewAntique.component.html
@@ -1,1 +1,6 @@
-<h1>View</h1>
+<app-header></app-header>
+<div class="container">
+    <mat-card>
+        <mat-card>Name: {{antique.name}}</mat-card>
+    </mat-card>
+</div>
