--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -24,7 +24,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of antiques  | FilterPipe: 'name': queryString">
+          <tr *ngFor="let item of antiques  | FilterPipe: 'name': queryString | paginate: { itemsPerPage: 10, currentPage: p }">
             <td (click)="goToAntiquePage(item._id)">{{item.name}}</td>
             <td (click)="goToAntiquePage(item._id)">{{item.description}}</td>
             <td (click)="goToAntiquePage(item._id)">{{item.location}}</td>
@@ -36,6 +36,7 @@
           </tr>
         </tbody>
       </table>
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
   </div>
 </div>
