--- a/src/app/Components/EditAntiqueComponent/editAntique.component.html
+++ b/src/app/Components/EditAntiqueComponent/editAntique.component.html
@@ -24,7 +24,10 @@
         <input type="text" placeholder="Value" required [(ngModel)]="dataService.Antique.value" [ngModelOptions]="{standalone: true}">
         <br>
         <label>Image Upload:</label>
-        <input type="text" placeholder="Image" required [(ngModel)]="dataService.Antique.image" [ngModelOptions]="{standalone: true}">
+        <input type="file" (change)="onImageFileSelected($event)">
+        <br>
+        <button type="button" class="upload-button" (click)="uploadFile()">Upload</button>
+        <mat-progress-bar class="upload-progress-bar" mode="determinate" value="{{ uploadPercent | async }}"></mat-progress-bar>
         <br>
         <label>Description:</label>
         <textarea placeholder="Description" required [(ngModel)]="dataService.Antique.description" [ngModelOptions]="{standalone: true}"></textarea>
@@ -51,7 +54,10 @@
         <textarea placeholder="Provenance" required [(ngModel)]="dataService.Antique.provenance" [ngModelOptions]="{standalone: true}"></textarea>
         <br>
         <label>Provenance Image:</label>
-        <input type="text" placeholder="Provenance Image" required [(ngModel)]="dataService.Antique.provenanceImage" [ngModelOptions]="{standalone: true}">
+        <input type="file" (change)="onProvenanceFileSelected($event)">
+        <br>
+        <button type="button" class="upload-button" (click)="uploadProvenanceFile()">Upload</button>
+        <mat-progress-bar class="upload-progress-bar" mode="determinate" value="{{ uploadPercentProv | async }}"></mat-progress-bar>
         <br>
         <label>Item Status:</label>
         <input type="text" placeholder="In Stock / Sold" required [(ngModel)]="dataService.Antique.status" [ngModelOptions]="{standalone: true}">
