push before demo

--- a/src/app/Components/ViewAntiqueComponent/viewAntique.component.html
+++ b/src/app/Components/ViewAntiqueComponent/viewAntique.component.html
@@ -2,5 +2,13 @@
 <div class="container">
     <mat-card>
         <mat-card>Name: {{antique.name}}</mat-card>
+        <mat-card>Artist: {{antique.artist}}</mat-card>
+        <mat-card>Category: {{antique.category}}</mat-card>
+        <mat-card>Condition: {{antique.condition}}</mat-card>
+        <mat-card>Description: {{antique.description}}</mat-card>
+        <mat-card>Image:<img class="img-fluid"src="{{antique.image}}"></mat-card>
+        <mat-card>Location: {{antique.location}}</mat-card>
+        <mat-card>Provenance: {{antique.provenance}}</mat-card>
+        <mat-card>Provenance Image: <img class="img-fluid" src='{{antique.provenanceImage}}'></mat-card>
     </mat-card>
 </div>
