download database to csv

--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -4,7 +4,7 @@
   <div class="app-container">
     <div class="antique-options">
       <button class="btn btn-success add-new-button" (click)="addNewAntique()">Add New Antique</button>
-      <button class="btn btn-info" (click)="downloadDatabaseAsXls()">Download Database</button>
+      <button class="btn btn-info" (click)="downloadDatabaseAsCsv()">Download Database</button>
     </div>
     <div class="antiques-table">
       <table class="table table-striped">
