--- a/src/app/Components/HomeComponent/home.component.html
+++ b/src/app/Components/HomeComponent/home.component.html
@@ -14,6 +14,12 @@
               Search Table by Name:
               <input type="text" [(ngModel)]="queryString" placeholder="Search...">
             </th>
+            <th>
+              Filter Table By Category:
+              <select [(ngModel)]="selectedFilter" [ngModelOptions]="{standalone: true}">
+                <option *ngFor="let c of categories" [ngValue]="c">{{c.category}}</option>
+              </select>
+            </th>
           </tr>
           <tr>
             <th style="width: 20%">Name</th>
@@ -25,15 +31,15 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of antiques  | FilterPipe: 'name': queryString | paginate: { itemsPerPage: 10, currentPage: p }">
+          <tr *ngFor="let item of antiques
+                      | FilterPipe: 'name': queryString 
+                      | paginate: { itemsPerPage: 10, currentPage: p }
+                      | FilterCategoryPipe: 'category': selectedFilter">
             <td (click)="goToAntiquePage(item._id)" class="item-name">{{item.name}}</td>
             <td (click)="goToAntiquePage(item._id)" class="item-description">{{item.description}}</td>
             <td (click)="goToAntiquePage(item._id)" class="item-location">{{item.location}}</td>
             <td>{{item.createdAt | date: 'dd/MM/yyyy'}}</td>
             <td (click)="editItem(item._id)" class="item-edit">Edit</td>
-            <!-- <td>
-              <i class="fa fa-trash delete-item"></i>
-            </td> -->
           </tr>
         </tbody>
       </table>
