--- a/src/app/Components/EditAntiqueComponent/editAntique.component.css
+++ b/src/app/Components/EditAntiqueComponent/editAntique.component.css
@@ -12,6 +12,11 @@ select {
     width: 350px;
 }
 
+.value-input,
+.value-date {
+    width: 175px;
+}
+
 textarea {
     width: 350px;
     height: 140px;
